# project-igrish-v.01

./: .gitignore  Context.md  Progress.md  README.md  Tasks.md
melissa-service/: .gitignore  alembic.ini  build.py  classification_rules.json  melissa.db  pyproject.toml  run_service.py
melissa-service/app/: main.py  models.py
melissa-service/app/api/: __init__.py  settings.py  voice.py
melissa-service/app/core/: briefing.py  classification.py  context_snapshot.py  conversation.py  db.py  decision_loop.py  fact_extractor.py  llm_registry.py  plugin_loader.py  prompt_builder.py  scheduler.py  secrets.py  session.py  streaming.py
melissa-service/app/memory/: context_aggregator.py  nudge_log.py  store_semantic.py
melissa-service/app/plugins/: base.py  coding_companion.py  cybersecurity_companion.py  search_tool.py
melissa-service/app/ports/: __init__.py  llm.py  sensor.py  stt.py  tts.py
melissa-service/chroma_db/: chroma.sqlite3
melissa-service/migrations/: env.py
melissa-service/migrations/versions/: 76ab0714f3d1_initial_migration.py  ce55dc92105e_add_cooldown_until_to_nudge_log.py
melissa-service/scripts/: test_wake_word.py
melissa-service/test_chroma_db/: chroma.sqlite3
melissa-service/tests/: test_adapters_stt.py  test_adapters_tts.py  test_main.py  test_ports.py
melissa-service/tests/adapters/: test_active_window.py  test_clipboard.py  test_input_activity.py  test_process_list.py  test_system_state.py
melissa-service/tests/core/: test_briefing_data_pull.py  test_classification.py  test_context_snapshot.py  test_conversation.py  test_secrets.py  (+9 more)
(+37 files in other folders)
