[project]
name = "melissa-service"
version = "0.1.0"
description = "Melissa Service - FastAPI Brain"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "faster-whisper",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "black",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
